syntax = "proto3";

package organization;

service OrganizationService {
  rpc ValidateOrganization (ValidateOrganizationRequest) returns (ValidateOrganizationResponse) {}
  rpc GetUserOrganizations (GetUserOrganizationsRequest) returns (OrganizationList) {}
}

message ValidateOrganizationRequest {
  string id = 1;
  string userid = 2;
}

message ValidateOrganizationResponse {
  bool valid = 1;
}

message GetUserOrganizationsRequest {
  string userId = 1;
  int32 page = 2;
  int32 pageSize = 3;
}

message Organization {
  string id = 1;
  string name = 2;
  string description = 3;
  repeated Member members = 4;
}

message Member {
  string userId = 1;
  string role = 2;
}

message OrganizationList {
  repeated Organization items = 1;
  int32 page = 2;
  int32 pageSize = 3;
  int32 itemCount = 4;
}
